# quantum-curator

./: .gitignore  CNAME  INTEL_TO_CURATOR_MIGRATION.txt  QUANTUM_CURATOR_OVERVIEW.md  README.md  about.html  curator_manifest.json  feed.xml  index.html  pyproject.toml  search.html
.github/workflows/: daily-curator.yml  recurate.yml  reshare-summary.yml
archive/: 2025-03.html  2025-04.html  2025-05.html  2025-06.html  2025-07.html  2025-11.html  2025-12.html  2026-01.html  2026-02.html  2026-03.html  2026-04.html  2026-05.html  2026-06.html  2026-07.html  index.html
data/: search-index.json
posts/: 0017fb26.html  003e577a.html  005644ac.html  00576e08.html  00760087.html  00b1cc1c.html  00c1fea7.html  00cf15d1.html  00d54a26.html  00db2dee.html  00e1e707.html  01176d81.html  015b55e9.html  0180b474.html  019563ad.html  0195afbe.html  01b82ce8.html  01e6a81a.html  01f15af0.html  0211aa4b.html  0283a66f.html  02945722.html  02c991ed.html  02cf5202.html  02d7b061.html  02dc7b11.html  02e04965.html  03224db8.html  03481d36.html  039d2e3c.html  03a5c963.html  03ec42aa.html  041e2773.html  04387c83.html  044002a3.html  0461a96f.html  047ced0f.html  047f1504.html  0499dedf.html  04aa847f.html  (+2539 more)
qrater_output/: index.html
qrater_output/static/qrater/: qrater.css
quantum_curator/: __init__.py  aggregator.py  bluesky.py  bluesky_handles.py  cli.py  config.py  curator.py  db.py  email_report.py  image_extractor.py  image_generator.py  llm_client.py  models.py  publisher.py  qday_export.py  twitter.py
quantum_curator/_vendor/: __init__.py
quantum_curator/_vendor/subvurs_impact/: README.md  VENDORED.md  __init__.py  donotuse.py  gates.py  path_catalog.py  schema.py  scorer.py
quantum_curator/data/: bluesky_handles.yaml
quantum_curator/intel/: __init__.py  brief_history.py  daily_summary.py  emailer.py  image_card.py  import_inventory.py  inventory_view.py  synthesizer.py
quantum_curator/site/: __init__.py  builder.py  qrater_builder.py
quantum_curator/site/static/css/: style.css
quantum_curator/site/static/qrater/: qrater.css  qrater.js
quantum_curator/site/templates/: about.html  archive.html  archive_month.html  base.html  feed.xml  index.html  post.html  search.html  topic.html  topics.html
quantum_curator/site/templates/qrater/: index.html
quantum_curator/sources/: __init__.py  arxiv.py  news.py  registry.py  rss.py
scripts/: export_intel_seed.py
static/css/: style.css
tests/: test_bluesky_facets.py  test_bluesky_handles.py  test_bluesky_post_text.py  test_bluesky_thread.py  test_curator_subvurs_impact.py  test_daily_summary_retry.py  test_intel_daily_summary.py  test_intel_image_card.py  test_intel_seed_import.py  test_intel_synth.py  test_llm_client.py  test_publisher_redaction.py  test_save_article.py
topics/: algorithms.html  cryptography.html  error_correction.html  general.html  hardware.html  index.html  industry.html  machine_learning.html  policy.html  research.html  sensing.html  simulation.html
