[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-curator"
version = "0.1.0"
description = "Automated quantum computing news aggregation and curation site"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Mark Eatherly" }
]
keywords = ["quantum", "computing", "news", "curation", "aggregation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "feedparser>=6.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dateutil>=2.8.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
quantum-curator = "quantum_curator.cli:cli"

[project.urls]
Homepage = "https://github.com/meathe/quantum-curator"
Repository = "https://github.com/meathe/quantum-curator"

[tool.hatch.build.targets.wheel]
packages = ["quantum_curator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
